--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ a {
 }
 
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: "Calibri", sans-serif;
   background-color: var(--extra-light);
 }
 
@@ -50,7 +50,8 @@ nav {
 nav .logo a {
   font-size: 1.5rem;
   font-weight: 600;
-  color: var(--primary-color);
+  color: rgb(134, 8, 8);
+  /* color: var(--primary-color); */
   transition: 0.3s;
 }
 nav .logo a:hover {
